--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,8 +7,22 @@
   --foreground: #171717;
 }
 
+
+* {
+    position: relative;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	scroll-behavior: smooth;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+}
+
+html, #__next {
+    height: 100%;
 }
