--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,13 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
-
 * {
-    position: relative;
+	position: relative;
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
@@ -17,12 +16,31 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
+	color: var(--foreground);
+	background: var(--background);
+	font-family: Arial, Helvetica, sans-serif;
+	height: 100%;
 }
 
-html, #__next {
-    height: 100%;
+html,
+#__next {
+	height: 100%;
 }
+
+/* *::-webkit-scrollbar {
+	width: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+	background: rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+	background: transparent;
+} */
+
+* {
+    scrollbar-width: none;
+    scrollbar-color: rgba(0, 0, 0, 0.5) transparent;
+  }
